8267598: jpackage removes system libraries from java.library.path

Reviewed-by: almatvee, asemenyuk